Fix question-card layout issue on desktop

--- a/static/scss/pages/_room-questions-list.scss
+++ b/static/scss/pages/_room-questions-list.scss
@@ -77,10 +77,6 @@
   height: auto;
   margin: 1em -.5em 0;
 
-  @include breakpoint(large up) {
-    flex-wrap: wrap;
-  }
-
   .list__item {
     display: flex;
     flex: 0 0 auto;
